# libuv

./: .gitattributes  CMakeLists.txt  README.md
lib/win_clang8.0/debug/: uv.lib  uv_a.lib
lib/win_clang8.0/release/: uv_a.lib
lib/win_msvc19.22/debug/: uv_a.lib
lib/win_msvc19.22/release/: uv.lib  uv_a.lib
